--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,14 @@ dependencies:
   flutter_tts: ^3.8.5
   speech_to_text: ^6.6.0
   camera: ^0.10.5+5
+  intl: ^0.19.0 # for date/time formatting
+  google_mlkit_text_recognition: ^0.11.0
+  permission_handler: ^11.0.1
+  shared_preferences: ^2.2.2 # for saving language preference
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
