--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   permission_handler: ^11.0.1
   shared_preferences: ^2.2.2 # for saving language preference
   image_cropper: ^5.0.1
+  vibration: ^3.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
